<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login"
    tools:ignore="ExtraText">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="116dp"
        android:background="#CBCBCB"
        app:layout_constraintBottom_toTopOf="@+id/Driverbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="83dp"
            android:layout_height="57dp"
            android:layout_marginTop="3.5mm"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo"
            tools:ignore="InOrMmUsage" />

        <TextView
            android:id="@+id/NTSF"
            android:layout_width="172dp"
            android:layout_height="31dp"
            android:layout_marginTop="38dp"
            android:paddingStart=".5in"
            android:text="122-3456"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="40dp" />


    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="576dp"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_baseline_logout_24"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:cornerRadius="15in"
        app:layout_constraintBottom_toTopOf="@+id/viewbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="InOrMmUsage" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/Driverbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10mm"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#2F556A"
        android:text="@string/driver"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="15in"
        app:layout_constraintBottom_toTopOf="@+id/Vehiclebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        tools:ignore="InOrMmUsage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Vehiclebtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10mm"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#236F99"
        android:text="@string/vehicle"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="15in"
        app:layout_constraintBottom_toTopOf="@+id/Pedestrianbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Driverbtn"
        tools:ignore="InOrMmUsage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Pedestrianbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10mm"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="191dp"
        android:backgroundTint="#556670"
        android:text="@string/pedestrian"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="15in"
        app:layout_constraintBottom_toTopOf="@+id/viewbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Vehiclebtn"
        tools:ignore="InOrMmUsage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewbtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#CBCBCB"
        android:text="@string/view_all_fines"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutbtn" />


</androidx.constraintlayout.widget.ConstraintLayout>