<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login"
    tools:ignore="ExtraText">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="423dp"
        android:layout_height="87dp"
        android:layout_marginTop="3dp"
        android:background="#CBCBCB"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="83dp"
            android:layout_height="57dp"
            android:layout_marginTop="3.5mm"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo"
            tools:ignore="InOrMmUsage" />

        <TextView
            android:id="@+id/Driver_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:paddingStart=".5in"
            android:text="@string/vq"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="40dp" />

        <Button
            android:id="@+id/Homebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="15in"
            android:layout_marginStart="280dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/ic_baseline_home_24"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/home_1"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="InOrMmUsage" />

    </FrameLayout>

    <TextView
        android:id="@+id/licence1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/Driver_1"
        android:layout_marginTop="110dp"
        android:paddingStart="20dp"
        android:text="@string/owner_nic"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints,NotSibling,RtlSymmetry" />


    <EditText
        android:id="@+id/nic"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/Driver_1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="B1454575"
        android:background="@color/white"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints,NotSibling,RtlSymmetry" />


    <TextView
        android:id="@+id/vehicleNo1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/Driver_1"
        android:layout_marginTop="188dp"
        android:paddingStart="20dp"
        android:text="@string/vehicle_no"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints,NotSibling,RtlSymmetry" />

    <EditText
        android:id="@+id/vehicleNo"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_below="@id/Driver_1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="216dp"
        android:autofillHints="B1454575"
        android:background="@color/white"
        android:gravity="left"
        android:hint="@string/kt_4193"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints,NotSibling,RtlHardcoded,RtlSymmetry,TextFields" />


    <TextView
        android:id="@+id/location1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/licence1"
        android:layout_marginTop="268dp"
        android:inputType="text"
        android:paddingStart="20dp"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints,NotSibling,RtlSymmetry,TextViewEdits" />


    <EditText
        android:id="@+id/location"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_below="@id/Driver_1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="304dp"
        android:autofillHints="B1454575"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints,NotSibling,RtlSymmetry,TextFields" />


    <TextView
        android:id="@+id/fineNo1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/Driver_1"
        android:layout_marginTop="360dp"
        android:paddingStart="20dp"
        android:text="@string/offence_no"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints,NotSibling,RtlSymmetry" />

    <EditText
        android:id="@+id/FineNo"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_below="@id/Driver_1"
        android:layout_marginStart="21dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="262dp"
        android:autofillHints="B1454575"
        android:background="@color/white"
        android:gravity="left"
        android:hint="@string/v_102"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints,NotSibling,RtlHardcoded,RtlSymmetry,TextFields" />


    <TextView
        android:id="@+id/Description1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/licence1"
        android:layout_marginTop="440dp"
        android:inputType="text"
        android:paddingStart="20dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints,NotSibling,RtlSymmetry,TextViewEdits" />


    <EditText
        android:id="@+id/description"
        android:layout_width="360dp"
        android:layout_height="90dp"
        android:layout_below="@id/Driver_1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="484dp"
        android:autofillHints="B1454575"
        android:background="@color/white"
        android:inputType="textMultiLine"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints,NotSibling,RtlSymmetry" />



    <Button
        android:id="@+id/footagebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="412dp"
        android:backgroundTint="#96B0BF"
        android:drawableEnd="@drawable/ic_baseline_file_upload_24"
        android:text="@string/footages"
        android:textColor="@color/black"
        app:cornerRadius="15in"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="InOrMmUsage,MissingConstraints" />


    <TextView
        android:id="@+id/incomplete_fields_message"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginBottom="36dp"
        android:text="Fields are Incomplete"
        android:textSize="18sp"
        android:visibility="invisible"
        android:background="@drawable/error_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/credentials_error"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginBottom="36dp"
        android:text="Invalid NIC"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/submitbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="616dp"
        android:backgroundTint="#25495C"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="15in"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="InOrMmUsage,MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewbtn"
        android:layout_width="393dp"
        android:layout_height="60dp"
        android:layout_marginTop="664dp"
        android:backgroundTint="#A6A6A6"
        android:text="VEHICLE-OFFENCE LIST"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="9dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>