<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    tools:ignore="ExtraText">


    <FrameLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:background="#C9D3DD"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/allfines"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:baselineAligned="false"
            android:text="@string/all_fines" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/ic_baseline_arrow_back_24"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold"
            app:cornerRadius="15in"
            tools:ignore="InOrMmUsage,RtlHardcoded" />


    </FrameLayout>


    <ImageView
        android:id="@+id/logo"
        android:layout_width="63dp"
        android:layout_height="87dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,DuplicateIds,MissingConstraints" />


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/listTD"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:text="@string/driver_fines"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/driver_fines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textColor="@android:color/black"
                android:textStyle="bold">


            </LinearLayout>


<!--            <TextView-->
<!--                android:id="@+id/listD"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:baselineAligned="false"-->
<!--                android:text="@string/scrolltextD"-->
<!--                android:textColor="@color/black" />-->

            <TextView
                android:id="@+id/listTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:text="@string/vehicle_fines" />

            <LinearLayout
                android:id="@+id/vehicle_fines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textColor="@android:color/black"
                android:textStyle="bold">


            </LinearLayout>

<!--            <TextView-->
<!--                android:id="@+id/listV"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:baselineAligned="false"-->
<!--                android:text="@string/scrolltextV"-->
<!--                android:textColor="@color/black" />-->


            <TextView
                android:id="@+id/listTP"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"

                android:text="@string/pedestrian_fines" />

            <LinearLayout
                android:id="@+id/pedestrian_fines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textColor="@android:color/black"
                android:textStyle="bold">


            </LinearLayout>

<!--            <TextView-->
<!--                android:id="@+id/listP"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:baselineAligned="false"-->
<!--                android:text="@string/scrolltextP"-->
<!--                android:textColor="@color/black" />-->

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

















